@@ -334,6 +334,14 @@ int ndb_modify_internal(
 		return rc;
 	}
 
+	if ( got_oc ) {
+		rc = ndb_entry_put_info( op->o_bd, NA, 1 );
+		if ( rc ) {
+			attrs_free( old );
+			return rc;
+		}
+	}
+
 	/* apply modifications to DB */
 	modai = (NdbAttrInfo **)op->o_tmpalloc( nmods * sizeof(NdbAttrInfo*), op->o_tmpmemctx );
 
@@ -357,7 +365,8 @@ int ndb_modify_internal(
 	}
 	ldap_pvt_thread_rdwr_runlock( &ni->ni_ai_rwlock );
 
-	if ( got_oc || indexed ) {
+	/* If got_oc, this was already done above */
+	if ( indexed && !got_oc) {
 		rc = ndb_entry_put_info( op->o_bd, NA, 1 );
 		if ( rc ) {
 			attrs_free( old );
